# Tingbogsattest

./: main.py  pyproject.toml
charset_normalizer-3.3.2.dist-info/: RECORD
robot_framework/: CreateDataBase.py  GetBFENR.py  GetKMDAcessToken.py  GetTingBogsUrl.py  Test.py  TingBogsattest.db  __main__.py  config.py  process.py  queue_framework.py
